# gotobed-se

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md  gotobed.sln  gotobed.vcxproj  gotobed.vcxproj.filters  vcpkg.json
cmake/: plugin.h.in  version.h.in  version.rc.in
cmake/modules/: FindDetours.cmake
src/: AIProcess.cpp  AIProcess.h  Actor.cpp  ActorData.cpp  ActorData.h  DiagUtil.cpp  DiagUtil.h  EquipConditions.cpp  EquipConditions.h  EquipMask.cpp  EquipMask.h  EquipSequence.cpp  EquipSequence.h  Fixes.cpp  Fixes.h  JCApi.cpp  JCApi.h  JCTypes.h  MenuOpenHandler.cpp  MenuOpenHandler.h  Offsets.h  Outfit.cpp  Outfit.h  SKSEMessaging.cpp  SKSEMessaging.h  SerializationStream.cpp  SerializationStream.h  Settings.cpp  Settings.h  SettingsPapyrus.cpp  SettingsPapyrus.h  TESObjectREFR.cpp  TESObjectREFR.h  UIFuncs.cpp  UIFuncs.h  UIUtil.cpp  UIUtil.h  UIUtilPapyrus.cpp  UIUtilPapyrus.h  formtostr.cpp  (+6 more)
src/gotobed/: AIProcess.cpp  AIProcess.h  Actor.cpp  Actor.h  EquipCondition.cpp  EquipList.cpp  EquipList.h  EquipMask.cpp  EquipMask.h  EquipSequence.cpp  EquipSequence.h  ExtraReservedMarkers.cpp  ExtraReservedMarkers.h  ExtraUsedMarkers.cpp  ExtraUsedMarkers.h  Fixes.cpp  JCApi.cpp  JCApi.h  MenuOpenHandler.cpp  MenuOpenHandler.h  Misc.cpp  Misc.h  Offsets.h  Outfit.cpp  Outfit.h  Settings.cpp  SleepwearManager.cpp  SleepwearManager.h  TESObjectREFR.cpp  TESObjectREFR.h  UIUtil.cpp  UIUtil.h  gotobedinit.cpp  gotobedinit.h
src/jc/: JArray.cpp  JArray.h  JDB.cpp  JDB.h  JFormDB.cpp  JFormDB.h  JMap.cpp  JMap.h  JValue.cpp  JValue.h  api.cpp  api.h  apistorage.cpp  domain.cpp  domain.h  jc.h  jcapi.cpp  jcapi.h  jcapistorage.cpp  jcapistorage.h  jcdomain.cpp  jcinit.cpp  jcinit.h
vcpkg/ports/commonlibsse/: log_directory.patch  logger.patch  portfile.cmake  vcpkg.json
vcpkg/ports/detours/: portfile.cmake
vcpkg/ports/jcontainers/: portfile.cmake  vcpkg.json
